--- a/github.html
+++ b/github.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="profile-info">
                         <h1 data-i18n="githubName">Yan Sanuei</h1>
-                        <p class="profile-bio" data-i18n="githubBio">Full Stack Developer | Open Source Enthusiast</p>
+                        <p class="profile-bio" data-i18n="githubBio">Full Stack Developer | 摄影爱好者</p>
                         <div class="profile-details">
                             <span><i class="fas fa-map-marker-alt"></i> Tokyo, Japan</span>
                             <span><i class="fas fa-building"></i> @名川ネットワーク</span>
