--- a/projects.html
+++ b/projects.html
@@ -54,30 +54,35 @@
             <!-- 项目1：e-staffing系统 -->
             <article class="project-card">
                 <div class="project-header">
-                    <h3>e-staffing人材派遣管理システム</h3>
+                    <h3 data-i18n="project1-title">e-staffing人材派遣管理システム</h3>
                     <span class="project-date">2023.12 - 2024.01</span>
+                </div>
+                <div class="project-image">
+                    <img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?q=80&w=1200" 
+                         alt="e-staffing系统界面 - 现代办公环境" 
+                         loading="lazy">
                 </div>
                 <div class="project-content">
                     <div class="project-tech">
                         <div class="tech-item">
-                            <strong>環境：</strong>
+                            <strong data-i18n="environment">環境：</strong>
                             <span>Windows / MySQL</span>
                         </div>
                         <div class="tech-item">
-                            <strong>言語：</strong>
+                            <strong data-i18n="language">言語：</strong>
                             <span>Java, SpringBoot, MyBatis</span>
                         </div>
                         <div class="tech-item">
-                            <strong>フロント：</strong>
+                            <strong data-i18n="frontend">フロント：</strong>
                             <span>HTML, CSS, JavaScript, jQuery</span>
                         </div>
                         <div class="tech-item">
-                            <strong>ツール：</strong>
+                            <strong data-i18n="tools">ツール：</strong>
                             <span>Eclipse, Git, VSCode</span>
                         </div>
                     </div>
                     <div class="project-description">
-                        <p>複数の派遣会社とのやり取りを一元化する、派遣管理システム</p>
+                        <p data-i18n="project1-desc">複数の派遣会社とのやり取りを一元化する、派遣管理システム</p>
                         <div class="project-tags">
                             <span class="tag">Java</span>
                             <span class="tag">SpringBoot</span>
@@ -91,30 +96,35 @@
             <!-- 项目2：通信方式选定工具 -->
             <article class="project-card">
                 <div class="project-header">
-                    <h3>通信方式選定ツール（電柱）</h3>
+                    <h3 data-i18n="project2-title">通信方式選定ツール（電柱）</h3>
                     <span class="project-date">2024.02 - 2024.06</span>
+                </div>
+                <div class="project-image">
+                    <img src="https://images.unsplash.com/photo-1544197150-b99a580bb7a8?q=80&w=1200" 
+                         alt="通信方式选定工具界面 - 通信设备" 
+                         loading="lazy">
                 </div>
                 <div class="project-content">
                     <div class="project-tech">
                         <div class="tech-item">
-                            <strong>環境：</strong>
+                            <strong data-i18n="environment">環境：</strong>
                             <span>Windows / MySQL</span>
                         </div>
                         <div class="tech-item">
-                            <strong>言語：</strong>
+                            <strong data-i18n="language">言語：</strong>
                             <span>Java, SpringBoot, JSP</span>
                         </div>
                         <div class="tech-item">
-                            <strong>フロント：</strong>
+                            <strong data-i18n="frontend">フロント：</strong>
                             <span>CSS, JavaScript, jQuery</span>
                         </div>
                         <div class="tech-item">
-                            <strong>ツール：</strong>
+                            <strong data-i18n="tools">ツール：</strong>
                             <span>Eclipse</span>
                         </div>
                     </div>
                     <div class="project-description">
-                        <p>StrutsからSpringbootに移行するプロジェクト</p>
+                        <p data-i18n="project2-desc">StrutsからSpringbootに移行するプロジェクト</p>
                         <div class="project-tags">
                             <span class="tag">Java</span>
                             <span class="tag">SpringBoot</span>
@@ -128,30 +138,35 @@
             <!-- 项目3：Java培训项目 -->
             <article class="project-card">
                 <div class="project-header">
-                    <h3>Javaプログラミングスクール</h3>
+                    <h3 data-i18n="project3-title">Javaプログラミングスクール</h3>
                     <span class="project-date">2023.10 - 2023.11</span>
+                </div>
+                <div class="project-image">
+                    <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?q=80&w=1200" 
+                         alt="Java编程培训项目 - 编程环境" 
+                         loading="lazy">
                 </div>
                 <div class="project-content">
                     <div class="project-tech">
                         <div class="tech-item">
-                            <strong>環境：</strong>
+                            <strong data-i18n="environment">環境：</strong>
                             <span>Windows / MySQL</span>
                         </div>
                         <div class="tech-item">
-                            <strong>言語：</strong>
+                            <strong data-i18n="language">言語：</strong>
                             <span>Java, SpringBoot, MyBatis</span>
                         </div>
                         <div class="tech-item">
-                            <strong>フロント：</strong>
+                            <strong data-i18n="frontend">フロント：</strong>
                             <span>HTML, CSS, JavaScript, Vue.js</span>
                         </div>
                         <div class="tech-item">
-                            <strong>ツール：</strong>
+                            <strong data-i18n="tools">ツール：</strong>
                             <span>Eclipse, SVN, Git, VSCode</span>
                         </div>
                     </div>
                     <div class="project-description">
-                        <p>Javaの基本からWebサイト構築、フレームワークまでの総合的な研修</p>
+                        <p data-i18n="project3-desc">Javaの基本からWebサイト構築、フレームワークまでの総合的な研修</p>
                         <div class="project-tags">
                             <span class="tag">Java</span>
                             <span class="tag">Vue.js</span>
