--- a/github.html
+++ b/github.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <!-- 网站品牌/Logo -->
         <div class="nav-brand">
-            <a href="index.html">Yan_Sanuei</a>
+            <a href="index.html">SONIC_YANN</a>
         </div>
         <!-- 移动端菜单按钮 -->
         <div class="nav-toggle" id="navToggle">
@@ -57,7 +57,7 @@
                         <div class="profile-details">
                             <span><i class="fas fa-map-marker-alt"></i> Tokyo, Japan</span>
                             <span><i class="fas fa-building"></i> @名川ネットワーク</span>
-                            <span><i class="fas fa-link"></i> <a href="https://sanuei.com">sanuei.com</a></span>
+                            <span><i class="fas fa-link"></i> <a href="https://sanuei.github.io/sanuei-resume/index.html">sanuei.github.io/sanuei-resume</a></span>
                         </div>
                     </div>
                 </div>
