--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <!-- 网站品牌/Logo -->
         <div class="nav-brand">
-            <a href="index.html">Yan_Sanuei</a>
+            <a href="index.html">SONIC_YANN</a>
         </div>
         <!-- 移动端菜单按钮 -->
         <div class="nav-toggle" id="navToggle">
