--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <!-- 导航栏部分与index.html相同 -->
     <nav class="navbar">
         <div class="nav-brand">
-            <a href="index.html">Yan_Sanuei</a>
+            <a href="index.html">SONIC_YANN</a>
         </div>
         <div class="nav-toggle" id="navToggle">
             <i class="fas fa-bars"></i>
@@ -67,7 +67,7 @@
             <h2><i class="fas fa-graduation-cap"></i> <span data-i18n="education">学历背景</span></h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="date">2022.10 - <span data-i18n="present">现在</span></div>
+                    <div class="date" data-i18n="study-period">2022.10 - 2023.10</div>
                     <div class="content">
                         <h3 data-i18n="school-1">大原日本語学院</h3>
                         <p data-i18n="major-1">日语学习</p>
@@ -166,10 +166,8 @@
         <section class="resume-section">
             <h2><i class="fas fa-user"></i> <span data-i18n="selfIntro">自我介绍</span></h2>
             <div class="self-introduction">
-                <p data-i18n="intro-p1">フルスタック開発者として、Java/SpringBootを中心としたバックエンド開発から、HTML/CSS/JavaScriptによるフロントエンド開発まで、幅広い技術スタックを持っています。</p>
-                <p data-i18n="intro-p2">AI技術に強い関心を持ち、ChatGPTやGitHub Copilotなどの最新のAIツールを積極的に活用し、開発効率の向上とコード品質の改善に取り組んでいます。</p>
-                <p data-i18n="intro-p3">チーム開発においては、GitやSVNを用いたバージョン管理、アジャイル開発手法を実践し、効率的なプロジェクト進行に貢献してきました。</p>
-                <p data-i18n="intro-p4">新しい技術への探究心を持ち、継続的な学習を通じて技術力の向上に努めています。特に、クラウドコンピューティングやマイクロサービスアーキテクチャに関心があり、AWS認定資格の取得を目指しています。</p>
+                <p data-i18n="intro-p1">作为全栈开发工程师，我精通从Java/SpringBoot后端开发到HTML/CSS/JavaScript前端开发的全面技术栈。</p>
+                <p data-i18n="intro-p2">对AI技术有浓厚兴趣，积极运用ChatGPT和GitHub Copilot等最新AI工具，提高开发效率和代码质量。</p>
             </div>
         </section>
     </main>
