--- a/github.html
+++ b/github.html
@@ -25,10 +25,10 @@
         </div>
         <!-- 导航链接 -->
         <ul class="nav-links">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="resume.html">简历</a></li>
-            <li><a href="projects.html">项目</a></li>
-            <li><a href="github.html">GitHub</a></li>
+            <li><a href="index.html" data-i18n="home">首页</a></li>
+            <li><a href="resume.html" data-i18n="resume">简历</a></li>
+            <li><a href="projects.html" data-i18n="projects">项目</a></li>
+            <li><a href="github.html" data-i18n="github">GitHub</a></li>
             <li class="language-dropdown">
                 <a href="#" class="language-btn">
                     <i class="fas fa-globe"></i>
