--- a/resume.html
+++ b/resume.html
@@ -56,9 +56,9 @@
                 </div>
                 <div class="contact-info">
                     <p><i class="fas fa-envelope"></i> sanuei.yann@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> 080-4910-8323</p>
-                    <p><i class="fab fa-weixin"></i> 08049108323</p>
-                    <p><i class="fas fa-map-marker-alt"></i> <span data-i18n="address">東京都江戸川区一之江</span></p>
+                    <p><i class="fas fa-phone"></i> 080xxxx-xxx</p>
+                    <p><i class="fab fa-weixin"></i> 080xxxx8323</p>
+                    <p><i class="fas fa-map-marker-alt"></i> <span data-i18n="address">東京都</span></p>
                 </div>
             </div>
         </section>
@@ -76,8 +76,8 @@
                 <div class="timeline-item">
                     <div class="date">2016.09 - 2020.07</div>
                     <div class="content">
-                        <h3 data-i18n="school-2">南京艺术学院</h3>
-                        <p data-i18n="major-2">媒体设计专业</p>
+                        <h3 data-i18n="school-2">xxxx</h3>
+                        <p data-i18n="major-2">xxxx</p>
                     </div>
                 </div>
             </div>
@@ -89,21 +89,21 @@
                 <div class="timeline-item">
                     <div class="date">2024.09 - <span data-i18n="present">现在</span></div>
                     <div class="content">
-                        <h3 data-i18n="company-1">(株)名川ネットワーク</h3>
+                        <h3 data-i18n="company-1">xxxxx</h3>
                         <p data-i18n="position-1">Web开发工程师</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="date">2023.10 - 2024.08</div>
                     <div class="content">
-                        <h3 data-i18n="company2">(株)Great Navigation</h3>
+                        <h3 data-i18n="company2">xxxxx</h3>
                         <p data-i18n="position2">Web开发工程师</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="date">2020.10 - 2021.10</div>
                     <div class="content">
-                        <h3 data-i18n="company3">南京德基广场有限公司</h3>
+                        <h3 data-i18n="company3">xxxx</h3>
                         <p data-i18n="position3">媒体设计师</p>
                     </div>
                 </div>
